--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
                 <div class="cxButtons">
 
-                    <button class="qtdItem">+</button>
+                    <button id="0" class="qtdItem" onclick="request.clickListener(this.id)">+</button>
 
                 </div>
 
@@ -61,7 +61,7 @@
 
                 <div class="cxButtons">
 
-                    <button class="qtdItem">+</button>
+                    <button id="1" class="qtdItem" onclick="request.clickListener(this.id)">+</button>
 
                 </div>
 
@@ -83,7 +83,7 @@
 
                 <div class="cxButtons">
 
-                    <button class="qtdItem">+</button>
+                    <button id="2" class="qtdItem" onclick="request.clickListener(this.id)">+</button>
 
                 </div>
 
@@ -105,7 +105,7 @@
 
                 <div class="cxButtons">
 
-                    <button class="qtdItem">+</button>
+                    <button id="3" class="qtdItem" onclick="request.clickListener(this.id)">+</button>
 
                 </div>
 
@@ -127,7 +127,7 @@
 
                 <div class="cxButtons">
 
-                    <button class="qtdItem">+</button>
+                    <button id="4" class="qtdItem" onclick="request.clickListener(this.id)">+</button>
 
                 </div>
 
@@ -149,7 +149,7 @@
 
                 <div class="cxButtons">
 
-                    <button class="qtdItem">+</button>
+                    <button id="5" class="qtdItem" onclick="request.clickListener(this.id)">+</button>
 
                 </div>
 
